# GameProject

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GameProject.sln  GameplayIdeas.md  Makefile  README.md  StoryIdeas.md  TODO.md  build.bat  cmake_install.cmake
Assets/: README
Class Diagrams/: BetterClassHierarchy.xml  README.md  TileDiagram.xml
ConceptArt/: README
Engine/: CMakeLists.txt  Engine.md  Engine.sln  Engine.vcxproj  JobManager.md  Makefile  cmake_install.cmake
Engine/Public Headers/: JobManager.h
Engine/docs/: FileManager.md  SoundManager.md
Engine/include/: Engine.h  EventManager.h  Graphics.h  JobManager.h  System.h  Thread.h
Engine/src/: Engine.cpp  EngineInternals.h  Graphics.cpp  JobManager.cpp  JobManagerTest.cpp  System.cpp  Thread.cpp  Thread.h  ThreadTest.cpp
Game/: CMakeLists.txt  Makefile  cmake_install.cmake
Game/include/: Area.h  Character.h  Consumable.h  Entity.h  Grid.h  Item.h  Map.h  NonPlayable.h  Playable.h  Sprite.h  Spritesheet.h  Stats.h  Tile.h  TileEnum.h  Weapon.h
Game/src/: Area.cpp  Character.cpp  Entity.cpp  Game.cpp  Map.cpp  NonPlayable.cpp  Playable.cpp  Tile.cpp
GameLogic/: Area.cpp  Area.h  CMakeLists.txt  Character.cpp  Character.h  Entity.h  GameLogic.vcxproj  Makefile  NonPlayable.cpp  NonPlayable.h  Playable.cpp  Vec2f.cpp  cmake_install.cmake
GameLogic/include/: Area.h  Vec2f.h
